dataset1235/2025-2/1153765216/users/4118477972/executions/2814675586_2296111720.log
== SUBMISSION (2025-08-26 18:17:05)
-- CODE: 
base = float(input("digite o numero:")
altura = float(input("digite o numero2:"))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:17:55)
-- CODE: 
base = float(input("digite o numero:"))
altura = float(input("digite o numero2:"))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
digite o numero:digite o numero2:36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
digite o numero:digite o numero2:6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
digite o numero:digite o numero2:360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
digite o numero:digite o numero2:6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
digite o numero:digite o numero2:1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
digite o numero:digite o numero2:83.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:15:45)
-- CODE: 
base = float(input("digite o numero:")
altura = float(input("digite o numero2:"))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input("digite o numero:")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
